--- a/public/css/plugins/index.css
+++ b/public/css/plugins/index.css
@@ -114,6 +114,7 @@
   font-family: "Montserrat", sans-serif;
   display: inline-block;
   position: absolute;
+  opacity: 0.7 !important;
   white-space: nowrap;
   left: 0;
   top: 0;
