--- a/public/css/plugins/banklogs.css
+++ b/public/css/plugins/banklogs.css
@@ -212,16 +212,30 @@ section .dataTables_wrapper dataTables_length {
 	opacity: 0 !important;
 }
 .bro-text p {
+    margin-top: 14px !important;
+    font-size: 21px !important;
+}
+@media screen and (max-width: 506px) {
+    .bro-text p {
+        font-size: 18px !important;
+        margin-top: 14px !important;
+    }
+}
+
+
+#services-carousel  .bro-text {
+	opacity: 0 !important;
+}
+#services-carousel .bro-text p {
     margin-top: 5px !important;
     font-size: 15px !important;
 }
 @media screen and (max-width: 506px) {
-    .bro-text p {
+    #services-carousel .bro-text p {
         font-size: 13px !important;
         margin-top: 13px !important;
     }
 }
-
 
 
 #services-carousel .port h4 a {
