--- a/public/css/plugins/app.css
+++ b/public/css/plugins/app.css
@@ -3516,26 +3516,28 @@ box-shadow: 0 3px 7px 0 rgba(73, 192, 208, 0.7);
 
 .butn.money {
   font-weight: 700;
-  font-size: 23px !important;
+  font-size: 24px !important;
   margin: 10px 18px !important;
-  padding: 8.5px 15px 8.5px 10px !important;
+  padding: 10px 14px 10px 11px !important;
   letter-spacing: 1.5px !important;
   color: #121d33;
+  border-width: 1.6px !important;
+  box-shadow: 0 0 0 1.2px rgba(255, 255, 255, 1) !important;
 }
 .butn.money img {
-  width: 37px !important;
-  height: 37px !important;
-  margin: -12px 0 -7px 2px !important;
-  border-radius: 0 !important;
+  width: 33px !important;
+  height: 33px !important;
+  margin: -8px -1px -8px 2px !important;
+  border-radius: 50% !important;
   display: inline-block !important;
 }
 
 @media screen and (max-width: 570px) {
   .butn.money {
     font-weight: 700;
-    font-size: 22px !important;
+    font-size: 23px !important;
     margin: 10px 15px !important;
-    padding: 8px 13px 8px 7px !important;
+    padding: 9px 13px 9px 11px !important;
     letter-spacing: 1.8px !important;
     color: #121d33;
   }
