--- a/public/css/plugins/home.css
+++ b/public/css/plugins/home.css
@@ -4,6 +4,21 @@
         margin-bottom: 21px;
     }
 }
+
+@media (min-width: 900px) {
+    .col-lg-65 {
+        -ms-flex:0 0 68%;
+        flex:0 0 68%;
+        max-width: 68%;
+    }  
+
+    .col-lg-45 {
+        -ms-flex:0 0 32%;
+        flex:0 0 32%;
+        max-width: 32%;
+    }  
+}
+
 .fa-sync-alt {
     margin-left: 5px !important;
 }
@@ -19,58 +34,8 @@
 	margin: 5px -0;
 }
 
-#chart4, #chart1 {
-	border-radius: 0;
-	margin: 0;
-    border-left: none !important;
-    border-right: none !important;
-    border-bottom: none !important;
-}
 
-
-
-.counter-box h4 {
-	display: inline-block;
-	font-weight: 600;
-}
-.counter-box {
-	position: relative;
-	text-align: center;
-}
-.counter-box h4 {
-	font-size: 35px;
-	line-height: normal;
-	margin: 0;
-}
-.counter-box h4:after {
-	content: "+";
-}
-.counter-box p {
-	color: #fff;
-	font-size: 18px;
-	font-weight: 600;
-  }
 @media screen and (max-width: 767px) {
-	.counter-box p:before {
-		margin: 0;
-		position: absolute;
-		top: 45px;
-	}
-	.counter-box p:after {
-		margin: 0;
-		left: 14px;
-		right: 0;
-		top: 45px;
-	}
-	.counter-box.black p:after {
-		margin: 0;
-		left: 14px;
-		right: 0;
-		top: 45px;
-	}
-	.counter-box h4 {
-		font-size: 26px;
-	}
 
     .col-6.howaz {
         margin: 23px 0 !important;
@@ -112,53 +77,53 @@
 	margin-top: -3px !important;
 }
 
-section .dataTables_wrapper .dataTables_paginate,
-section .dataTables_wrapper dataTables_length {
+section#sales .dataTables_wrapper .dataTables_paginate,
+section#sales .dataTables_wrapper dataTables_length {
     display: block !important;
 }
 
 
 @media screen and (max-width: 767px) {
-    .dataTables_wrapper .dataTables_length,
-    .dataTables_wrapper .dataTables_filter,
-    .dataTables_wrapper .dataTables_info,
-    .dataTables_wrapper .dataTables_paginate {
+    section#sales .dataTables_wrapper .dataTables_length,
+    section#sales .dataTables_wrapper .dataTables_filter,
+    section#sales .dataTables_wrapper .dataTables_info,
+    section#sales .dataTables_wrapper .dataTables_paginate {
       text-align: center;
     }
-    .dataTables_wrapper .dataTables_filter,
-    .dataTables_wrapper .dataTables_paginate {
+    section#sales .dataTables_wrapper .dataTables_filter,
+    section#sales .dataTables_wrapper .dataTables_paginate {
       margin-top: 0.5em;
     }
-    .dataTables_wrapper .dataTables_filter {
+    section#sales .dataTables_wrapper .dataTables_filter {
       margin-top: -0.5em !important;
       background:  rgba(18, 29, 51, 0.21) !important;
       padding-left: 7px !important;
       display: flex !important;
       width: 50% !important;
     }
-    .dataTables_wrapper .dataTables_filter input{
+    section#sales .dataTables_wrapper .dataTables_filter input{
       width: 120px !important;
       margin-top: 0.7em !important;
     }
   }
 
   @media screen and (max-width: 420px) {
-    .dataTables_wrapper .dataTables_filter input{
+    section#sales .dataTables_wrapper .dataTables_filter input{
       width: 110px !important;
     }
   }
   @media screen and (max-width: 400px) {
-    .dataTables_wrapper .dataTables_filter input{
+    section#sales .dataTables_wrapper .dataTables_filter input{
       width: 100px !important;
     }
   }
   @media screen and (max-width: 380px) {
-    .dataTables_wrapper .dataTables_filter input{
+    section#sales .dataTables_wrapper .dataTables_filter input{
       width: 93px !important;
     }
   }
   @media screen and (max-width: 370px) {
-    .dataTables_wrapper .dataTables_filter input{
+    section#sales .dataTables_wrapper .dataTables_filter input{
       width: 85px !important;
     }
   }
