--- a/public/css/plugins/home.css
+++ b/public/css/plugins/home.css
@@ -580,3 +580,7 @@ hr.hr-2 {
     margin: 4px auto !important;
     opacity: 0 !important
 }
+
+#cd-time .section-heading h4 {
+    margin-bottom: 0px;
+  }
