--- a/public/css/plugins/download.css
+++ b/public/css/plugins/download.css
@@ -483,6 +483,18 @@ padding: 6px 0 !important;
       flex:0 0 32%;
       max-width: 32%;
   }  
+
+  .col-lg-81 {
+    -ms-flex:0 0 74%;
+    flex:0 0 74%;
+    max-width: 74%;
+  }  
+
+  .col-lg-41 {
+      -ms-flex:0 0 26%;
+      flex:0 0 26%;
+      max-width: 26%;
+  }  
 }
 
 .fa-sync-alt {
