--- a/public/css/plugins/apps.css
+++ b/public/css/plugins/apps.css
@@ -1129,8 +1129,8 @@ td {
   padding: 5px 0;
 }
 #invoice-col-table {
-  margin: 0;
   padding: 3px;
+  margin-top: 30px;
 }
 #invoice-table {
   margin: 7px 0;
@@ -1171,7 +1171,8 @@ td {
 @media (max-width: 576px) {
   #invoice-col-table {
       padding: 0;
-      margin: 7px 0;
+      margin-top: 7px;
+      margin-bottom: 7px;
   }
   #invoice-table {
       margin: 0;
@@ -1300,7 +1301,6 @@ td {
       padding-right: 7px !important;
   }
 }
-#showlink img,
 #showtoasts img {
   width: 32px !important;
   height: 32px !important;
@@ -1309,7 +1309,6 @@ td {
   border-radius:  0 !important;
 }
 @media (max-width: 780px) {
-  #showlink img,
   #showtoasts img {
     width: 27.5px !important;
     height: 27.5px !important;
@@ -1328,7 +1327,6 @@ td {
 
 
 
-#showlink,
 #showtoasts {
   text-transform: capitalize !important;
   font-size: 28px !important;
@@ -1337,34 +1335,21 @@ td {
   font-weight: 700 !important;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.85) !important;
 }
-
-#showlink {
-  float: left !important;
-  margin: 30px 60px !important;
-}
-
 #showtoasts {
   float: right !important;
-  margin: 30px 60px !important;
+  margin: 25px 75px !important;
 }
 
 @media (max-width: 570px) {
-  #showlink,
   #showtoasts {
     font-size: 23.5px !important;
-    padding: 11px !important;
-    letter-spacing: 1.5px !important;
+    padding: 11.75px !important;
+    letter-spacing: 1.4px !important;
   }
 
-
-  #showlink {
-    float: left !important;
-    margin: 10px 20px !important;
-  }
-  
   #showtoasts {
     float: right !important;
-    margin: 10px 20px !important;
+    margin: 12.5px 25px !important;
   }  
 }
 
@@ -3341,25 +3326,9 @@ box-shadow: 0 3px 7px 0 rgba(73, 192, 208, 0.7);
 
 
 
-
-
-
-
-@media (min-width: 769px) and (max-width: 1091px) {
-  #profileModal .modal-dialog {
-      max-width: 90vw;
-      margin: 1.75rem auto;
-  }
-}
-@media (min-width: 569px) and (max-width: 768px) {
-  #profileModal .modal-dialog {
-      max-width: 92vw;
-      margin: 1.75rem auto;
-  }
-}
 @media (min-width: 1092px) {
   #profileModal .modal-dialog {
-      min-width: 85vw;
+      min-width: 75vw;
       margin: 1.75rem auto;
   }
 }
