--- a/public/css/styles-8.css
+++ b/public/css/styles-8.css
@@ -280,7 +280,6 @@ blink {
 .custom-file-label::after,
 .navbar-nav li.nav-small a,
 #showtoasts,
-#showlink,
 #copy-text,
 .money {
   background: rgb(205, 235, 229) !important;
@@ -338,18 +337,15 @@ span#uidz,
 span#uids {
   color: rgb(139, 208, 195) !important;
 }
-#showlink,
 #showtoasts {
   border: 2.2px solid rgba(22, 160, 134, 0.7);
 }
 #confirm-depo,
-#email-phone,
-#showlink {
+#email-phone {
   background: rgb(162, 218, 207) !important;
   color: rgb(19, 45, 61) !important;
   border: 2.2px solid rgba(21, 127, 113, 0.7)
 }
-#showlink,
 .gold#vpn-nav {
   background: rgb(139, 209, 196) !important
 }
