--- a/public/css/styles-3.css
+++ b/public/css/styles-3.css
@@ -276,7 +276,6 @@ blink {
 .custom-file-label::after,
 .navbar-nav li.nav-small a,
 #showtoasts,
-#showlink,
 #copy-text,
 .money {
   background: rgb(200, 225, 237) !important;
@@ -333,18 +332,15 @@ span#uidz,
 span#uids {
   color: rgb(128, 185, 214) !important;
 }
-#showlink,
 #showtoasts {
   border: 2.2px solid rgba(0, 115, 173, 0.7);
 }
 #confirm-depo,
-#email-phone,
-#showlink {
+#email-phone {
   background: rgb(153, 199, 222) !important;
   color: rgb(16, 40, 66) !important;
   border: 2.2px solid rgba(5, 94, 143, 0.7);
 }
-#showlink,
 .gold#vpn-nav {
   background: rgb(85, 162, 200) !important;
 }
