--- a/public/css/styles-5.css
+++ b/public/css/styles-5.css
@@ -278,7 +278,6 @@ blink {
 .custom-file-label::after,
 .navbar-nav li.nav-small a,
 #showtoasts,
-#showlink,
 #copy-text,
 .money {
   background: rgb(254, 240, 201) !important;
@@ -336,18 +335,15 @@ span#uidz,
 span#uids {
   color: rgb(253, 219, 129) !important;
 }
-#showlink,
 #showtoasts {
   border: 2.2px solid rgba(250, 183, 2, 0.7);
 }
 #confirm-depo,
-#email-phone,
-#showlink {
+#email-phone {
   background: rgb(252, 226, 154) !important;
   color: rgb(47, 48, 45) !important;
   border: 2.2px solid rgba(192, 145, 14, 0.7);
 }
-#showlink,
 .gold#vpn-nav {
   background: rgb(250, 206, 86) !important;
 }
