--- a/public/css/plugins/download.css
+++ b/public/css/plugins/download.css
@@ -102,9 +102,11 @@ margin: -0.7vh auto !important;
   padding-left: 13px !important;
   padding-left: 13px !important;
   font-size: 25px;
+  box-shadow: 0 0 0 1.7px rgba(255, 255, 255, 0.92) !important;
 }
 #anon-check img {
-  margin-left: 7px !important;
+  margin-left: 3px !important;
+  margin-right: 2px !important;
   width: 33px !important;
   height: 33px !important;
   border-radius: 5px !important;
