--- a/public/css/styles-2.css
+++ b/public/css/styles-2.css
@@ -341,6 +341,7 @@ span#uids{
   border: 2.2px solid rgba(3, 169, 245, 0.7);
 }
 #confirm-depo,
+#anon-check,
 #email-phone {
   background: rgb(154, 221, 252) !important;
   color: rgb(16, 47, 75) !important;
