--- a/public/css/plugins/apps.css
+++ b/public/css/plugins/apps.css
@@ -2254,7 +2254,7 @@ ul.countdown li p {
   margin: 40px auto 20px;
   cursor: pointer;
   font-size: 26px !important;
-  padding: 10.5px 13px !important;
+  padding: 10px 13px !important;
   letter-spacing: 1.3px !important;
 
   border: 1.3px solid rgb(18, 29, 51, 1) !important;
@@ -2263,7 +2263,7 @@ ul.countdown li p {
 @media screen and (max-width: 767px) {
   #vpn {
       font-size: 24px !important;
-      padding: 9px 12px !important;
+      padding: 9.5px 12.5px !important;
   }
 }
 #vpn img {
@@ -2445,7 +2445,7 @@ ul.countdown li p {
 #depo-2,
 #save-1, 
 #save-2 {
-  font-size: 20.7px !important;
+  font-size: 21px !important;
   line-height: 61px !important;
   text-align: center !important;
 }
@@ -2462,7 +2462,7 @@ ul.countdown li p {
   #depo-2,
   #save-1, 
   #save-2 {
-      font-size: 21.7px !important;
+      font-size: 22px !important;
       line-height: 64px !important;
   }
   #usage-p,
@@ -2483,7 +2483,7 @@ ul.countdown li p {
   #depo-2,
   #save-1, 
   #save-2 {
-      font-size: 19.7px !important;
+      font-size: 20px !important;
       line-height: 59px !important;
   }
 
@@ -2516,7 +2516,7 @@ ul.countdown li p {
   #depo-2,
   #save-1, 
   #save-2 {
-      font-size: 19.3px !important;
+      font-size: 19.5px !important;
       line-height: 56px !important;
   }
 }
@@ -2533,6 +2533,10 @@ ul.countdown li p {
       font-size: 19px !important;
       line-height: 54px !important;
   }
+}
+#save-1, 
+#save-2 {
+  letter-spacing: 1px !important;
 }
 @media screen and (max-width: 374px) {
   .modal-p {
