--- a/public/css/plugins/apps.css
+++ b/public/css/plugins/apps.css
@@ -148,7 +148,7 @@
 }
 .gallery .butn {
   letter-spacing: 1.5px !important;
-  margin-bottom: 6px !important;
+  margin: 7px auto !important;
   padding: 7px 13px 7px 11px !important;
   font-size: 19px !important;
   box-shadow: 0 0 0 1.4px rgba(255, 255, 255, 0.85) !important;
@@ -156,11 +156,14 @@
 @media screen and (max-width: 766px) {
   .gallery .butn {
     letter-spacing: 1.5px !important;
-    margin-bottom: 6px !important;
+    margin: 5px auto !important;
     padding: 6.5px 13px 6.5px 11px !important;
     font-size: 18.3px !important;
     box-shadow: 0 0 0 1.3px rgba(255, 255, 255, 0.85) !important;
   }
+}
+.gallery .col-lg-3 {
+  margin-bottom: 21px !important;
 }
 
 .butn img {
@@ -3429,9 +3432,6 @@ box-shadow: 0 3px 7px 0 rgba(73, 192, 208, 0.7);
 }
 
 
-.gallery .col-lg-3 {
-  margin-bottom: 15px !important;
-}
 
 .butn.money {
   font-weight: 700;
