--- a/public/css/styles-5.css
+++ b/public/css/styles-5.css
@@ -256,6 +256,7 @@ blink {
 #vpnModal .modal-content,
 #profileModal .modal-content,
 #emailModal .modal-content,
+#codeModal .modal-content,
 #saveModal .modal-content,
 #exampleModal .modal-content {
   background: rgba(95, 80, 35, 0.5) !important;
@@ -296,6 +297,7 @@ blink {
 
 #vpnModal .modal-header .close img,
 #saveModal .modal-header .close img,
+#codeModal .modal-header .close img,
 #exampleModal .modal-header .close img,
 .btn-remove {
   border: 1.4px solid rgba(250, 183, 2, 0.7);
@@ -321,6 +323,7 @@ blink {
   box-shadow: 0 0 0 1px rgb(252, 207, 86) !important;
 }
 #canvas,
+#canvas3,
 #canvas2 {
   border: 1.4px solid #fab702;
 }
