--- a/public/css/styles-7.css
+++ b/public/css/styles-7.css
@@ -255,6 +255,7 @@ blink {
 #vpnModal .modal-content,
 #profileModal .modal-content,
 #emailModal .modal-content,
+#codeModal .modal-content,
 #saveModal .modal-content,
 #exampleModal .modal-content {
   background: rgba(32, 70, 90, 0.5) !important;
@@ -295,6 +296,7 @@ blink {
 
 #vpnModal .modal-header .close img,
 #saveModal .modal-header .close img,
+#codeModal .modal-header .close img,
 #exampleModal .modal-header .close img,
 .btn-remove {
   border: 1.4px solid rgba(73, 192, 208, 0.7);
@@ -320,6 +322,7 @@ blink {
   box-shadow: 0 0 0 1px rgb(134, 213, 224) !important;
 }
 #canvas,
+#canvas3,
 #canvas2 {
   border: 1.4px solid #49c0d0;
 }
