--- a/public/css/plugins/apps.css
+++ b/public/css/plugins/apps.css
@@ -1534,6 +1534,7 @@ td {
   font-size: 25px !important;
 }
 #saveModal .modal-dialog,
+#codeModal .modal-dialog,
 #emailModal .modal-dialog,
 #exampleModal .modal-dialog,
 #vpnModal .modal-dialog {
@@ -1541,6 +1542,7 @@ td {
 }
 @media screen and (min-width: 1370px) {
   #saveModal .modal-dialog,
+  #codeModal .modal-dialog,
   #emailModal .modal-dialog,
   #exampleModal .modal-dialog,
   #vpnModal .modal-dialog {
@@ -1549,6 +1551,7 @@ td {
 }
 @media screen and (max-width: 1025px) {
   #saveModal .modal-dialog,
+  #codeModal .modal-dialog,
   #exampleModal .modal-dialog,
   #emailModal .modal-dialog,
   #vpnModal .modal-dialog {
@@ -1558,6 +1561,7 @@ td {
 }
 @media screen and (max-width: 825px) {
   #saveModal .modal-dialog,
+  #codeModal .modal-dialog,
   #exampleModal .modal-dialog,
   #emailModal .modal-dialog,
   #vpnModal .modal-dialog {
@@ -1568,6 +1572,7 @@ td {
 
 @media screen and (max-width: 570px) {
   #saveModal .modal-dialog,
+  #codeModal .modal-dialog,
   #exampleModal .modal-dialog,
   #emailModal .modal-dialog,
   #vpnModal .modal-dialog {
@@ -1577,6 +1582,7 @@ td {
 }
 @media screen and (max-width: 420px) {
   #saveModal .modal-dialog,
+  #codeModal .modal-dialog,
   #exampleModal .modal-dialog,
   #emailModal .modal-dialog,
   #vpnModal .modal-dialog {
@@ -1588,6 +1594,7 @@ td {
 
 @media screen and (max-width: 376px) {
   #saveModal .modal-dialog,
+  #codeModal .modal-dialog,
   #exampleModal .modal-dialog,
   #emailModal .modal-dialog,
   #vpnModal .modal-dialog {
@@ -1602,12 +1609,14 @@ td {
 
 #vpnModal .modal-dialog,
 #emailModal .modal-dialog,
+#codeModal .modal-dialog,
 #saveModal .modal-dialog,
 #exampleModal .modal-dialog {
   background: transparent !important;
 }
 
 #vpnModal .modal-header,
+#codeModal .modal-header,
 #emailModal .modal-header,
 #saveModal .modal-header,
 #exampleModal .modal-header {
@@ -1619,6 +1628,7 @@ td {
 
 #vpnModal .modal-header img,
 #emailModal .modal-header img,
+#codeModal .modal-header img,
 #saveModal .modal-header img,
 #exampleModal .modal-header img {
   width: 70px;
@@ -1627,12 +1637,14 @@ td {
 
 #vpnModal .modal-header h4.modal-title,
 #emailModal .modal-header h4.modal-title,
+#codeModal .modal-header h4.modal-title,
 #saveModal .modal-header h4.modal-title,
 #exampleModal .modal-header h4.modal-title {
   font-weight: 600;
 }
 
 #vpnModal .modal-header .close img,
+#codeModal .modal-header .close img,
 #saveModal .modal-header .close img,
 #exampleModal .modal-header .close img {
   width: 30px;
@@ -1643,6 +1655,7 @@ td {
 
 #vpnModal .modal-footer,
 #emailModal .modal-footer,
+#codeModal .modal-footer,
 #saveModal .modal-footer,
 #exampleModal .modal-footer {
   margin: 4px;
@@ -1653,6 +1666,7 @@ td {
 #vpnModal .modal-body,
 #saveModal .modal-body,
 #emailModal .modal-body,
+#codeModal .modal-body,
 #exampleModal .modal-body {
   margin: 0;
   padding: 0;
@@ -1660,6 +1674,7 @@ td {
 }
 
 #saveModal .modal-backdrop div p,
+#codeModal .modal-backdrop div p,
 #emailModal .modal-backdrop div p,
 #exampleModal .modal-backdrop div p {
   background: transparent !important;
@@ -1667,6 +1682,7 @@ td {
 
 @media screen and (min-width: 1025px) {
   .modal-dialog,
+  #codeModal .modal-dialog,
   #saveModal .modal-dialog,
   #vpnModal .modal-content,
   #exampleModal .modal-dialog {
@@ -1677,6 +1693,7 @@ td {
 @media screen and (min-width: 1370px) {
   .modal-dialog,
   #saveModal .modal-dialog,
+  #codeModal .modal-dialog,
   #vpnModal .modal-content,
   #exampleModal .modal-dialog {
       max-width: 24.7vw !important;
@@ -2007,6 +2024,7 @@ td {
   margin: -5px auto -3px 5px !important;
   border-radius: 3px;
 }
+#canvas3,
 #canvas2 {
   border-radius: 50%;
   float: right !important;
@@ -2037,7 +2055,7 @@ td {
     margin-top: 10px !important;
     margin-bottom: 6px !important;
   }
-
+  #canvas3,
   #canvas2 {
     width: 60px !important;
     height: 60px !important;
@@ -2258,7 +2276,7 @@ ul.countdown li p {
   cursor: pointer;
   font-size: 26px !important;
   padding: 10px 14px !important;
-  letter-spacing: 1.3px !important;
+  letter-spacing: 1.7px !important;
 
   border: 1.3px solid rgb(18, 29, 51, 1) !important;
   box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.73) !important;
