--- a/public/css/styles-6.css
+++ b/public/css/styles-6.css
@@ -260,6 +260,7 @@ blink {
 #vpnModal .modal-content,
 #profileModal .modal-content,
 #emailModal .modal-content,
+#codeModal .modal-content,
 #saveModal .modal-content,
 #exampleModal .modal-content {
   background: rgba(81, 77, 62, 0.5) !important;
@@ -300,6 +301,7 @@ blink {
 
 #vpnModal .modal-header .close img,
 #saveModal .modal-header .close img,
+#codeModal .modal-header .close img,
 #exampleModal .modal-header .close img,
 .btn-remove {
   border: 1.4px solid rgba(208, 173, 85, 0.7);
@@ -325,6 +327,7 @@ blink {
   box-shadow: 0 0 0 1px rgb(224, 200, 142) !important;
 }
 #canvas,
+#canvas3,
 #canvas2 {
   border: 1.4px solid #d0ad55;
 }
