--- a/public/css/styles-8.css
+++ b/public/css/styles-8.css
@@ -259,6 +259,7 @@ blink {
 #vpnModal .modal-content,
 #profileModal .modal-content,
 #emailModal .modal-content,
+#codeModal .modal-content,
 #saveModal .modal-content,
 #exampleModal .modal-content {
   background: rgba(19, 73, 79, 0.5) !important;
@@ -298,6 +299,7 @@ blink {
 
 #vpnModal .modal-header .close img,
 #saveModal .modal-header .close img,
+#codeModal .modal-header .close img,
 #exampleModal .modal-header .close img,
 .btn-remove {
   border: 1.4px solid rgba(22, 160, 134, 0.7);
@@ -323,6 +325,7 @@ blink {
   box-shadow: 0 0 0 1px rgb(100, 192, 174) !important;
 }
 #canvas,
+#canvas3,
 #canvas2 {
   border: 1.4px solid #16a086;
 }
