--- a/public/css/styles-2.css
+++ b/public/css/styles-2.css
@@ -21,6 +21,7 @@
   border-top: 1.4px solid rgba(3, 169, 245, 0.5) !important;
 }
 #depoLife,
+#saveLife,
 #code,
 #inputLife {
   color: rgb(15, 61, 96) !important;
@@ -213,6 +214,7 @@ blink {
 }
 #depo-life,
 #code-life,
+#save-life,
 #the-life {
   box-shadow: 1px 1px 2px 1px rgba(3, 169, 245, 0.5) !important;
 }
