--- a/public/css/styles-4.css
+++ b/public/css/styles-4.css
@@ -21,6 +21,7 @@
   border-top: 1.4px solid rgba(71, 88, 143, 0.5) !important;
 }
 #depoLife,
+#saveLife,
 #code,
 #inputLife {
   color: rgb(30, 43, 72) !important;
@@ -212,6 +213,7 @@ blink {
 }
 #depo-life,
 #code-life,
+#save-life,
 #the-life {
   box-shadow: 1px 1px 2px 1px rgba(71, 88, 143, 0.5) !important;
 }
