--- a/public/css/styles-5.css
+++ b/public/css/styles-5.css
@@ -21,6 +21,7 @@
   border-top: 1.4px solid rgba(250, 183, 2, 0.5) !important;
 }
 #depoLife,
+#saveLife,
 #code,
 #inputLife {
   color: rgb(72, 65, 40) !important;
@@ -213,6 +214,7 @@ blink {
   color: rgb(251, 201, 65) !important;
 }
 #depo-life,
+#save-life,
 #code-life,
 #the-life {
   box-shadow: 1px 1px 2px 1px rgba(250, 183, 2, 0.5) !important;
