--- a/public/css/styles-6.css
+++ b/public/css/styles-6.css
@@ -27,6 +27,7 @@
   border-top: 1.4px solid rgba(208, 173, 85, 0.5) !important;
 }
 #depoLife,
+#saveLife,
 #code,
 #inputLife {
   color: rgb(62, 62, 59) !important;
@@ -215,6 +216,7 @@ blink {
 }
 #depo-life,
 #code-life,
+#save-life,
 #the-life {
   box-shadow: 1px 1px 2px 1px rgba(208, 173, 85, 0.5) !important;
 }
