--- a/public/css/styles-7.css
+++ b/public/css/styles-7.css
@@ -21,6 +21,7 @@
   border-top: 1.4px solid rgba(73, 192, 208, 0.5) !important;
 }
 #depoLife,
+#saveLife,
 #code,
 #inputLife {
   color:  rgb(31, 67, 87) !important;
@@ -212,6 +213,7 @@ blink {
 }
 #depo-life,
 #code-life,
+#save-life,
 #the-life {
   box-shadow: 1px 1px 2px 1px rgba(73, 192, 208, 0.5) !important;
 }
