--- a/public/css/styles-8.css
+++ b/public/css/styles-8.css
@@ -21,6 +21,7 @@
   border: 1.4px solid rgba(22, 160, 134, 0.7);
 }
 #depoLife,
+#saveLife,
 #code,
 #inputLife {
   color: rgb(19, 59, 70) !important;
@@ -213,6 +214,7 @@ blink {
   color: rgb(80, 184, 164) !important;
 }
 #depo-life,
+#save-life,
 #code-life,
 #the-life {
   box-shadow: 1px 1px 2px 1px rgba(22, 160, 134, 0.5) !important;
