--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,6 +21,7 @@
   border-top: 1.4px solid rgba(134, 188, 66, 0.5) !important;
 }
 #depoLife,
+#saveLife,
 #code,
 #inputLife {
   color: rgb(45, 66, 54) !important;
@@ -213,6 +214,7 @@ blink {
 }
 #depo-life,
 #code-life,
+#save-life,
 #the-life {
   box-shadow: 1px 1px 2px 1px rgba(134, 188, 66, 0.5) !important;
 }
